--- a/docker/img/Dockerfile
+++ b/docker/img/Dockerfile
@@ -1,17 +1,14 @@
 # Filename: Dockerfile 
 FROM python:3.8-alpine3.12
 
-RUN apk --no-cache add curl unzip
-
+RUN apk --no-cache add curl wget
 RUN mkdir /data
 
 WORKDIR /data
 
-RUN curl --output 5etools.zip https://get.5e.tools/src/ && unzip 5etools.zip && rm 5etools.zip
+RUN curl -s https://api.github.com/repos/5etools-mirror-1/5etools-mirror-1.github.io/tags | grep tarball_url | grep v. | cut -d '"' -f 4 | head -n 1 | wget -O 5etools.tar.gz -qi - && tar xzf 5etool>
 
-RUN curl --output 5etools_img.zip https://get.5e.tools/img/ && unzip 5etools_img.zip && mv tmp/5et/img . && rm -r tmp && rm 5etools_img.zip
-
-RUN cp 5etools.html index.html
+#RUN cp 5etools.html index.html
 
 VOLUME /data/homebrew
 
