update and fix Dockerfiles

--- a/docker/noimg/Dockerfile
+++ b/docker/noimg/Dockerfile
@@ -7,8 +7,7 @@ RUN mkdir /data
 
 WORKDIR /data
 
-RUN curl -s https://api.github.com/repos/5etools-mirror-1/5etools-mirror-1.github.io/tags | grep tarball_url | grep v. | cut -d '"' -f 4 | head -n 1 | wget -O 5etools.tar.gz -qi - && tar xzf 5etool>
-#RUN cp 5etools.html index.html
+RUN curl -s https://api.github.com/repos/5etools-mirror-1/5etools-mirror-1.github.io/tags | grep tarball_url | grep v. | cut -d '"' -f 4 | head -n 1 | wget -O 5etools.tar.gz -qi - && tar xzf 5etools.tar.gz --strip-components=1 && rm 5etools.tar.gz && rm -rf img
 
 VOLUME /data/homebrew
 
